--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
 
 body{
     background-image: url(images/bg-pattern-top-mobile.svg), url(images/bg-pattern-bottom-mobile.svg);
-    background-position: top, bottom;
+    background-position: top left, right bottom;
     background-repeat: no-repeat;
 }
 .container{
