--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     --purple: hsl(300, 43%, 22%);
     --dark-gray-purple:hsl(303, 10%, 53%);
     --light-grey-purple: hsl(300, 24%, 96%);
-    --white: hsl(0, 0%, 100%);
+    --white: hsla(0, 0%, 100%, 0.959);
 
     --bold: 700;
     --medium: 500;
@@ -113,11 +113,111 @@ h2{
 
 }
 
-
-
 span{
     display: block;
     font-weight: var(--light);
     color: var(--soft-pink);
     font-size: 13px;
+}
+
+@media screen and (min-width: 1200px) {
+    
+    body{
+        display: flex;
+        justify-content: center;
+    }
+    .container{
+        margin-top: 6rem;
+        grid-template-columns: 40% 40%;
+        grid-template-rows: 300px 260px;
+        max-width: 1440px;
+        min-height: 100vh;
+    }
+
+    .hero{
+        grid-column: 1  ;
+        grid-row: 1 ;
+    }
+    .hero *{
+        text-align: start;
+        padding: 0;
+        
+    }
+    h1{
+        font-size: 2.5rem;
+        width: 60%;
+    }
+    h2, span{
+        font-size: 15px;
+    }
+    .hero p{
+        width: 75%;
+        line-height: 200%;
+        font-size: 15px;
+    }
+
+    
+    
+    
+    /* / /rating */
+    .rating{
+        grid-column: 2;
+        grid-row: 1;
+        display: grid;
+        align-content: start;
+        padding-top:1rem ;
+        
+
+    }
+    .rating *{
+        padding: 0;
+    }
+    .rating-box{
+        width: 80%;
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center ;
+        height: 4rem;
+    }
+    .rt-1{
+        justify-self: start;
+    }
+    .rt-2{
+        justify-self: center;
+    }
+    .rt-3{
+        justify-self: end;
+    }
+
+
+    /* / /comment */
+    .comment{
+        grid-column:1/3;
+        grid-row: 2;
+        display: grid;
+        grid-template-columns: auto auto auto;
+        column-gap: 18px;
+    }
+
+    .comment-box{
+        height: auto;
+    }
+
+    .comment-box p{
+        font-size: 15px;
+    }
+    .cm-1{
+        align-self: start;
+    }
+    .cm-2{
+        align-self: center;
+    }
+    .cm-3{
+        align-self: end;
+    }
+
+}
+
+.attribution{
+    text-align: start;
 }
