--- a/style.css
+++ b/style.css
@@ -123,15 +123,18 @@ span{
 @media screen and (min-width: 1200px) {
     
     body{
+        background-image: url(images/bg-pattern-top-desktop.svg), url(images/bg-pattern-bottom-desktop.svg);
+        background-position: top left, right bottom;
+        background-repeat: no-repeat;
         display: flex;
         justify-content: center;
     }
     .container{
-        margin-top: 6rem;
+        margin-top: 10rem;
         grid-template-columns: 40% 40%;
-        grid-template-rows: 300px 260px;
+        grid-template-rows: 260px 260px;
         max-width: 1440px;
-        min-height: 100vh;
+        height: 100vh;
     }
 
     .hero{
@@ -218,6 +221,3 @@ span{
 
 }
 
-.attribution{
-    text-align: start;
-}
